[package]
name = "webtoon_spider"
version = "0.1.0"
authors = ["George H. de Menibus <g.f.l.hellouindemenibus@student.tudelft.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
html5ever = "0.25"
tokio = { version = "1", features = ["full"]}
markup5ever_rcdom = "0.1"
bytes = "1.1"